data/derived/comb/progs/unify/prog6842.ml.out
Characters 43-44:
  let f a x = bigAdd (a::0) (mulByDigit x l1) in
                         ^
Error: This expression has type int but an expression was expected of type
         int list
